--- a/parchment.cabal
+++ b/parchment.cabal
@@ -28,6 +28,11 @@ executable parchment
                      , network >= 2.6
                      , bytestring >= 0.10
                      , brick >= 0.13
+                     , vty
+                     , text
+                     , data-default
+                     , microlens
+                     , microlens-th
   default-language:    Haskell2010
 
 test-suite parchment-test
