--- a/parchment.cabal
+++ b/parchment.cabal
@@ -15,8 +15,11 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:
+      Parchment
+      Parchment.Parsing
   build-depends:       base >= 4.7 && < 5
+                     , bytestring >= 0.10
   default-language:    Haskell2010
 
 executable parchment
@@ -42,6 +45,7 @@ executable parchment
                      , stm
                      , stm-conduit
                      , split
+                     , mtl
   default-language:    Haskell2010
 
 test-suite parchment-test
