--- a/parchment.cabal
+++ b/parchment.cabal
@@ -64,6 +64,11 @@ test-suite parchment-test
   main-is:             Spec.hs
   build-depends:       base
                      , parchment
+                     , HUnit
+                     , containers
+                     , stm
+                     , microlens
+                     , microlens-th
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
