--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
 - brick-0.13
+- husk-scheme-3.19.3
 - text-zipper-0.7.1
 
 # Override default flag values for local packages and extra-deps
