--- a/parchment.cabal
+++ b/parchment.cabal
@@ -34,6 +34,8 @@ library
 
 executable parchment
   hs-source-dirs:      app
+  other-modules:
+      ScriptInterface
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
