--- a/parchment.cabal
+++ b/parchment.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:
       Parchment
+      Parchment.Fchar
       Parchment.Parsing
       Parchment.Session
   build-depends:       base >= 4.7 && < 5
