--- a/parchment.cabal
+++ b/parchment.cabal
@@ -65,6 +65,7 @@ executable parchment
                      , mtl
                      , parsec
                      , regex-tdfa
+                     , terminal-size
                      , xdg-basedir
   default-language:    Haskell2010
 
