--- a/parchment.cabal
+++ b/parchment.cabal
@@ -42,6 +42,7 @@ executable parchment
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , argparser
                      , parchment
                      , network >= 2.6
                      , bytestring >= 0.10
