--- a/parchment.cabal
+++ b/parchment.cabal
@@ -17,9 +17,11 @@ library
   hs-source-dirs:      src
   exposed-modules:
       Parchment
+      Parchment.EscSeq
       Parchment.FString
-      Parchment.Parsing
+      Parchment.ParseState
       Parchment.Session
+      Parchment.Telnet
   build-depends:       base >= 4.7 && < 5
                      , bytestring >= 0.10
                      , array
