--- a/parchment.cabal
+++ b/parchment.cabal
@@ -22,6 +22,7 @@ library
       Parchment.ParseState
       Parchment.Session
       Parchment.Telnet
+      Parchment.Util
   build-depends:       base >= 4.7 && < 5
                      , bytestring >= 0.10
                      , array
