--- a/parchment.cabal
+++ b/parchment.cabal
@@ -20,6 +20,7 @@ library
       Parchment.EscSeq
       Parchment.FString
       Parchment.ParseState
+      Parchment.RingBuffer
       Parchment.Session
       Parchment.Telnet
       Parchment.Util
@@ -32,6 +33,7 @@ library
                      , parsec
                      , vty
                      , microlens
+                     , microlens-ghc
                      , microlens-th
                      , mtl
                      , regex-tdfa
@@ -55,6 +57,7 @@ executable parchment
                      , text
                      , data-default
                      , microlens
+                     , microlens-ghc
                      , microlens-th
                      , containers
                      , conduit
