--- a/parchment.cabal
+++ b/parchment.cabal
@@ -25,6 +25,7 @@ library
       Parchment.Telnet
       Parchment.Util
   build-depends:       base >= 4.7 && < 5
+                     , aeson
                      , bytestring >= 0.10
                      , array
                      , brick
@@ -33,7 +34,6 @@ library
                      , parsec
                      , vty
                      , microlens
-                     , microlens-ghc
                      , microlens-th
                      , mtl
                      , regex-tdfa
@@ -47,6 +47,7 @@ executable parchment
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , aeson
                      , argparser
                      , parchment
                      , network >= 2.6
@@ -57,7 +58,6 @@ executable parchment
                      , text
                      , data-default
                      , microlens
-                     , microlens-ghc
                      , microlens-th
                      , containers
                      , conduit
@@ -68,11 +68,14 @@ executable parchment
                      , io-streams
                      , stm
                      , stm-conduit
-                     , split
                      , mtl
                      , parsec
                      , regex-tdfa
+                     , scientific
+                     , split
                      , terminal-size
+                     , unordered-containers
+                     , vector
                      , xdg-basedir
   default-language:    Haskell2010
 
@@ -83,7 +86,9 @@ test-suite parchment-test
   build-depends:       base
                      , parchment
                      , HUnit
+                     , bytestring >= 0.10
                      , containers
+                     , husk-scheme
                      , stm
                      , microlens
                      , microlens-th
